Added a new project and improved UI on the qualificiations page.

--- a/portfolio.html
+++ b/portfolio.html
@@ -316,6 +316,37 @@
           </div>
         </article>
 
+        <!-- AURORA -->
+        <article class="card project" data-tags="ml systems ui">
+          <img class="card__img" src="assets/aurora.png" alt="AURORA compute recommendation dashboard">
+          <div class="card__body" style="padding:12px 14px;">
+            <h2 class="card__title">AURORA — ML Compute Calibration &amp; Recommendations</h2>
+            <p class="meta">Next.js · FastAPI · Docker Sandbox · Profiling</p>
+            <div class="project-links" aria-label="Project links">
+              <a class="icon-btn" href="https://github.com/aaryabookseller16/AURORA" target="_blank" rel="noopener" aria-label="GitHub Repository" title="GitHub">
+                <i class="fa-brands fa-github"></i>
+              </a>
+              <a class="icon-btn" href="https://youtu.be/rehZRheiDdw?si=gfDULRlVyl6faQPv" target="_blank" rel="noopener" aria-label="YouTube Demo" title="YouTube Demo">
+                <i class="fa-brands fa-youtube"></i>
+              </a>
+            </div>
+            <p>
+              Full-stack prototype that turns a <strong>calibration run</strong> into a defensible compute decision.
+              Users upload an ML repo, run a sandboxed job in <strong>Docker</strong>, and AURORA captures runtime, logs,
+              and profiling signals (CPU/RAM/IO) to estimate scaling and recommend <em>fastest / cheapest / balanced</em>
+              options with clear reasoning.
+            </p>
+            <p>
+              Produces reproducible <strong>run bundles</strong> (Dockerfile + scripts + README) to bridge local testing →
+              deployment. Optional GenAI-assisted calibration suggestions and chat for quick tuning and diagnosis.
+            </p>
+            <div class="pills">
+              <span class="pill">FastAPI</span><span class="pill">Next.js</span><span class="pill">Docker</span>
+              <span class="pill">Profiling</span><span class="pill">MLOps Tooling</span>
+            </div>
+          </div>
+        </article>
+
         <!-- VisionQuery -->
         <article class="card project" data-tags="ml systems ui">
           <img class="card__img" src="assets/visionquery.png" alt="VisionQuery semantic search results UI">
