--- a/portfolio.html
+++ b/portfolio.html
@@ -161,9 +161,7 @@
     .card.project .card__body{ display:flex; flex-direction:column; padding:14px 16px; }
     .card.project .card__title{ font-size:1.15rem; line-height:1.25; margin:.1rem 0 .35rem; }
     .card.project .meta{ font-size:.9rem; opacity:.75; margin:0 0 .35rem; }
-    .card.project p:not(.meta){
-      display:-webkit-box; -webkit-box-orient:vertical; overflow:hidden; -webkit-line-clamp:5;
-    }
+    .card.project p:not(.meta){ display:block; overflow:visible; }
     .card.project .pills{ margin-top:auto; }
     .card__img{ border-bottom:1px solid var(--ring,#e6e6e6); }
     .card__img{ display:block; width:100%; aspect-ratio:16/9; object-fit:cover; }
@@ -287,31 +285,34 @@
     <div class="container" id="projectsRegion" role="region" aria-labelledby="tab-all">
       <div class="grid-3" id="projectsGrid">
 
-        <!-- NaviAI -->
-        <article class="card project" data-tags="ml systems ui">
-          <img class="card__img" src="assets/routes.jpeg" alt="NaviAI route visualization">
+        <!-- POS System -->
+        <article class="card project" data-tags="systems ui">
+          <img class="card__img" src="assets/boba.jpg" alt="Bubble tea POS product image">
           <div class="card__body" style="padding:12px 14px;">
-            <h2 class="card__title">NaviAI — Maritime Routing with Risk</h2>
-            <p class="meta">Machine Learning Engineer · Jan 2025–Present</p>
+            <h2 class="card__title">Bubble Tea POS — Inventory &amp; Ordering</h2>
+            <p class="meta">JavaFX · PostgreSQL · AWS · Node.js · Express.js · React · Vite · Bootstrap</p>
             <div class="project-links" aria-label="Project links">
-              <a class="icon-btn" href="https://github.com/aaryabookseller16/NaviAI" target="_blank" rel="noopener" aria-label="GitHub Repository" title="GitHub">
+              <a class="icon-btn" href="https://github.com/aaryabookseller16/bubble-tea-pos" target="_blank" rel="noopener" aria-label="GitHub Repository" title="GitHub">
                 <i class="fa-brands fa-github"></i>
+              </a>
+              <a class="icon-btn" href="https://project3team21-2.onrender.com/" target="_blank" rel="noopener" aria-label="Live Website" title="Website">
+                <i class="fa-solid fa-arrow-up-right-from-square"></i>
               </a>
             </div>
             <p>
-              Multi-objective routing that balances <strong>time</strong>, <strong>fuel</strong>, and <strong>operational risk</strong>.
-              The engine fuses live weather and port conditions with a news-derived risk score (Transformer sentiment + rules) to
-              adjust edge weights in real time. Constraints like draft limits, traffic separation schemes, exclusion zones, and canal
-              fees are modeled explicitly. The policy stack combines a Transformer forecaster with PPO-based routing under uncertainty.
+              End-to-end <strong>point-of-sale</strong> platform with customer ordering, staff roles, and inventory management. 
+              Built a normalized <strong>PostgreSQL</strong> schema with triggers/constraints, transactional order processing, and audit logs. 
+              Implemented a responsive <strong>JavaFX</strong> UI with role-based access, receipt printing, and admin dashboards.
             </p>
             <p>
-              A Streamlit UI shows <em>fastest / cheapest / safest</em> alternatives with deltas in ETA, fuel burn, and risk.
-              Each route includes short LLM rationales. The pipeline includes cached data fetchers, reproducible configs,
-              and scenario “playbacks” for incident post-mortems and what-if planning. Runtime services are monitored via Prometheus and Grafana.
+              Backend uses a DAO layer over JDBC, batch inserts, and parameterized queries for safety and speed. 
+              Deployed on <strong>AWS</strong> with environment-based configs and GitHub Actions for CI build checks.
             </p>
             <div class="pills">
-              <span class="pill">Python</span><span class="pill">NetworkX</span><span class="pill">Transformers</span>
-              <span class="pill">Streamlit</span><span class="pill">Pandas</span>
+              <span class="pill">Java</span><span class="pill">JavaFX</span><span class="pill">PostgreSQL</span>
+              <span class="pill">JDBC</span><span class="pill">AWS</span><span class="pill">Node.js</span>
+              <span class="pill">Express.js</span><span class="pill">React</span><span class="pill">Vite</span>
+              <span class="pill">Bootstrap</span>
             </div>
           </div>
         </article>
@@ -343,33 +344,6 @@
             <div class="pills">
               <span class="pill">FastAPI</span><span class="pill">Next.js</span><span class="pill">Docker</span>
               <span class="pill">Profiling</span><span class="pill">MLOps Tooling</span>
-            </div>
-          </div>
-        </article>
-
-        <!-- VisionQuery -->
-        <article class="card project" data-tags="ml systems ui">
-          <img class="card__img" src="assets/visionquery.png" alt="VisionQuery semantic search results UI">
-          <div class="card__body" style="padding:12px 14px;">
-            <h2 class="card__title">VisionQuery — Text-to-Image Semantic Search</h2>
-            <p class="meta">FastAPI · CLIP · Prometheus/Grafana</p>
-            <div class="project-links" aria-label="Project links">
-              <a class="icon-btn" href="https://github.com/aaryabookseller16/Vision-Query" target="_blank" rel="noopener" aria-label="GitHub Repository" title="GitHub">
-                <i class="fa-brands fa-github"></i>
-              </a>
-            </div>
-            <p>
-              Backend-first semantic search MVP: ingest images into an embedding index, embed text + images into the same <strong>CLIP</strong>
-              vector space, and return ranked results via <strong>cosine similarity</strong>. Exposes clean endpoints for health checks,
-              ingestion, search, and Prometheus-compatible metrics.
-            </p>
-            <p>
-              Designed to be explainable and interview-friendly: simple in-memory vector store (easy to swap for FAISS/pgvector),
-              containerized dev with <strong>Docker Compose</strong>, and basic observability dashboards.
-            </p>
-            <div class="pills">
-              <span class="pill">FastAPI</span><span class="pill">CLIP</span><span class="pill">Vector Search</span>
-              <span class="pill">Prometheus</span><span class="pill">Grafana</span>
             </div>
           </div>
         </article>
@@ -428,32 +402,87 @@
           </div>
         </article>
 
-        <!-- POS System -->
-        <article class="card project" data-tags="systems ui">
-          <img class="card__img" src="assets/boba.jpg" alt="Bubble tea POS product image">
+        <!-- NetCrawler -->
+        <article class="card project" data-tags="systems">
+          <img class="card__img" src="assets/Web-Crawling.webp" alt="HTTP DNS crawler architecture diagram">
           <div class="card__body" style="padding:12px 14px;">
-            <h2 class="card__title">Bubble Tea POS — Inventory &amp; Ordering</h2>
-            <p class="meta">JavaFX · PostgreSQL · AWS</p>
+            <h2 class="card__title">NetCrawler — HTTP/DNS Web Crawler</h2>
+            <p class="meta">C++ · Sockets · DNS · Concurrency · CSCE 612</p>
+
+            <p>
+              Built a multi-stage crawler that does <strong>URL parsing</strong>, <strong>DNS resolution</strong>, and enforces
+              <strong>host/IP uniqueness</strong> before fetching. Uses a two-step policy: <strong>HEAD /robots.txt</strong> (bounded + status rules)
+              then a size-bounded <strong>HTTP GET</strong>. Implemented on raw TCP sockets with correct partial send/recv handling and clean shutdown.
+            </p>
+
+            <p>
+              Designed to scale to <strong>multi-threaded crawling</strong> with synchronized shared state. Course project for
+              <strong>CSCE 612 (Distributed Systems &amp; Networking)</strong>, so no public repo/deploy.
+            </p>
+
+            <div class="pills">
+              <span class="pill">C++</span>
+              <span class="pill">Winsock / BSD Sockets</span>
+              <span class="pill">DNS</span>
+              <span class="pill">HTTP</span>
+              <span class="pill">Concurrency</span>
+              <span class="pill">Systems Programming</span>
+            </div>
+          </div>
+        </article>
+
+        <!-- NaviAI -->
+        <article class="card project" data-tags="ml systems ui">
+          <img class="card__img" src="assets/routes.jpeg" alt="NaviAI route visualization">
+          <div class="card__body" style="padding:12px 14px;">
+            <h2 class="card__title">NaviAI — Maritime Routing with Risk</h2>
+            <p class="meta">Machine Learning Engineer · Jan 2025–Present</p>
             <div class="project-links" aria-label="Project links">
-              <a class="icon-btn" href="https://github.com/aaryabookseller16/bubble-tea-pos" target="_blank" rel="noopener" aria-label="GitHub Repository" title="GitHub">
+              <a class="icon-btn" href="https://github.com/aaryabookseller16/NaviAI" target="_blank" rel="noopener" aria-label="GitHub Repository" title="GitHub">
                 <i class="fa-brands fa-github"></i>
-              </a>
-              <a class="icon-btn" href="https://project3team21-2.onrender.com/" target="_blank" rel="noopener" aria-label="Live Website" title="Website">
-                <i class="fa-solid fa-arrow-up-right-from-square"></i>
               </a>
             </div>
             <p>
-              End-to-end <strong>point-of-sale</strong> platform with customer ordering, staff roles, and inventory management. 
-              Built a normalized <strong>PostgreSQL</strong> schema with triggers/constraints, transactional order processing, and audit logs. 
-              Implemented a responsive <strong>JavaFX</strong> UI with role-based access, receipt printing, and admin dashboards.
+              Multi-objective routing that balances <strong>time</strong>, <strong>fuel</strong>, and <strong>operational risk</strong>.
+              The engine fuses live weather and port conditions with a news-derived risk score (Transformer sentiment + rules) to
+              adjust edge weights in real time. Constraints like draft limits, traffic separation schemes, exclusion zones, and canal
+              fees are modeled explicitly. The policy stack combines a Transformer forecaster with PPO-based routing under uncertainty.
             </p>
             <p>
-              Backend uses a DAO layer over JDBC, batch inserts, and parameterized queries for safety and speed. 
-              Deployed on <strong>AWS</strong> with environment-based configs and GitHub Actions for CI build checks.
+              A Streamlit UI shows <em>fastest / cheapest / safest</em> alternatives with deltas in ETA, fuel burn, and risk.
+              Each route includes short LLM rationales. The pipeline includes cached data fetchers, reproducible configs,
+              and scenario “playbacks” for incident post-mortems and what-if planning. Runtime services are monitored via Prometheus and Grafana.
             </p>
             <div class="pills">
-              <span class="pill">Java</span><span class="pill">JavaFX</span><span class="pill">PostgreSQL</span>
-              <span class="pill">JDBC</span><span class="pill">AWS</span>
+              <span class="pill">Python</span><span class="pill">NetworkX</span><span class="pill">Transformers</span>
+              <span class="pill">Streamlit</span><span class="pill">Pandas</span>
+            </div>
+          </div>
+        </article>
+
+        <!-- VisionQuery -->
+        <article class="card project" data-tags="ml systems ui">
+          <img class="card__img" src="assets/visionquery.png" alt="VisionQuery semantic search results UI">
+          <div class="card__body" style="padding:12px 14px;">
+            <h2 class="card__title">VisionQuery — Text-to-Image Semantic Search</h2>
+            <p class="meta">FastAPI · CLIP · Prometheus/Grafana</p>
+            <div class="project-links" aria-label="Project links">
+              <a class="icon-btn" href="https://github.com/aaryabookseller16/Vision-Query" target="_blank" rel="noopener" aria-label="GitHub Repository" title="GitHub">
+                <i class="fa-brands fa-github"></i>
+              </a>
+            </div>
+            <p>
+              Backend-first semantic search MVP: ingest images into an embedding index, embed text + images into the same <strong>CLIP</strong>
+              vector space, and return ranked results via <strong>cosine similarity</strong>. Exposes clean endpoints for health checks,
+              ingestion, search, and Prometheus-compatible metrics.
+            </p>
+            <p>
+              Designed to be explainable and interview-friendly: simple in-memory vector store (easy to swap for FAISS/pgvector),
+              containerized dev with <strong>Docker Compose</strong>, and basic observability dashboards.
+            </p>
+            <div class="pills">
+              <span class="pill">FastAPI</span><span class="pill">CLIP</span><span class="pill">Vector Search</span>
+              <span class="pill">Prometheus</span><span class="pill">Grafana</span>
             </div>
           </div>
         </article>
@@ -579,67 +608,31 @@
 
     <!-- Right links -->
     <div class="footer-links" style="display:flex; gap:1.25rem; flex-wrap:wrap; font-size:1.3rem;">
-      
-      <!-- Google Scholar -->
-      <a href="https://scholar.google.com/citations?hl=en&user=TGcPvxcAAAAJ&view_op=list_works&sortby=title" target="_blank" rel="noopener" aria-label="Google Scholar" title="Google Scholar">
-        <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true" focusable="false">
-          <!-- Graduation cap icon -->
-          <path d="M12 3 1 9l11 6 9-4.91V17h2V9L12 3zm0 8.73L4.62 9 12 5.27 19.38 9 12 11.73zM6 13v3.5C6 18.43 8.69 20 12 20s6-1.57 6-3.5V13l-6 3-6-3z"/>
-        </svg>
-      </a>
-
-      <!-- LinkedIn -->
       <a href="https://www.linkedin.com/in/aarya-bookseller-b6a8531b7/" target="_blank" rel="noopener" aria-label="LinkedIn">
-        <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 24 24" fill="currentColor">
-          <path d="M4.98 3.5C4.98 5 3.9 6 2.5 6S0 5 0 3.5 1.1 1 2.5 1s2.48 1 2.48 2.5zM.5 8h4V24h-4V8zm7.5 0h3.8v2.2h.1c.5-1 1.8-2.2 3.8-2.2 4 0 4.7 2.6 4.7 6V24h-4v-8c0-1.9 0-4.3-2.6-4.3-2.6 0-3 2-3 4.2V24h-4V8z"/>
-        </svg>
+        <i class="fa-brands fa-linkedin" aria-hidden="true"></i>
       </a>
 
-      <!-- Work Email -->
+      <a href="https://github.com/aaryabookseller16" target="_blank" aria-label="GitHub">
+        <i class="fa-brands fa-github" aria-hidden="true"></i>
+      </a>
+
+      <a href="https://scholar.google.com/citations?hl=en&user=TGcPvxcAAAAJ&view_op=list_works&sortby=title" target="_blank" rel="noopener" aria-label="Google Scholar" title="Google Scholar">
+        <i class="fa-brands fa-google-scholar" aria-hidden="true"></i>
+      </a>
+
       <span class="tooltip">
         <a href="mailto:aaryab.work@gmail.com" aria-label="Work Email">
-          <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 24 24" fill="currentColor">
-            <path d="M20 4H4c-1.1 0-2 .9-2 
-                     2v12c0 1.1.9 2 2 
-                     2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 
-                     4-8 5-8-5V6l8 
-                     5 8-5v2z"/>
-          </svg>
+          <i class="fa-brands fa-google" aria-hidden="true"></i>
         </a>
         <span class="tooltip-text">aaryab.work@gmail.com</span>
       </span>
 
-      <!-- School Email -->
       <span class="tooltip">
         <a href="mailto:aaryabookseller@tamu.edu" aria-label="School Email">
-          <img src="assets/tamu.png" alt="TAMU logo" style="width:22px; height:22px; object-fit:contain; vertical-align:middle;">
+          <img src="assets/tamu.png" alt="TAMU logo">
         </a>
         <span class="tooltip-text">aaryabookseller@tamu.edu</span>
       </span>
-
-      <!-- GitHub -->
-      <a href="https://github.com/aaryabookseller16" target="_blank" aria-label="GitHub">
-        <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 24 24" fill="currentColor">
-          <path d="M12 .297c-6.63 0-12 
-                   5.373-12 12 0 5.303 3.438 
-                   9.8 8.205 11.385.6.113.82-.258.82-.577 
-                   0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61 
-                   -.546-1.387-1.333-1.757-1.333-1.757-1.089-.744.083-.729.083-.729 
-                   1.205.084 1.84 1.236 1.84 1.236 
-                   1.07 1.835 2.809 1.305 3.495.998 
-                   .108-.776.418-1.305.762-1.605-2.665-.305-5.466-1.335-5.466-5.93 
-                   0-1.31.469-2.381 1.236-3.221-.124-.303-.536-1.524.117-3.176 
-                   0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 
-                   1.02.005 2.047.138 3.006.404 2.291-1.552 
-                   3.297-1.23 3.297-1.23.655 1.653.243 
-                   2.874.119 3.176.77.84 1.235 1.911 
-                   1.235 3.221 0 4.609-2.804 
-                   5.624-5.475 5.921.43.372.823 
-                   1.102.823 2.222 0 1.606-.014 
-                   2.896-.014 3.286 0 .319.216.694.825.576C20.565 
-                   22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"/>
-        </svg>
-      </a>
 
     </div>
   </div>
